fix word wrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+#result {
+	word-wrap: break-word;
+}
+
 #pokemon-list {
 	display: flex;
 	flex-wrap: wrap;
